--- a/frontend/src/places/components/PlaceItem.css
+++ b/frontend/src/places/components/PlaceItem.css
@@ -29,10 +29,15 @@
   margin: 0 0 0.5rem 0;
 }
 
-.place-item__actions {
+/* .place-item__actions {
   padding: 1rem;
   text-align: center;
   border-top: 1px solid #ccc;
+} */
+.place-item__actions{
+  text-align: right;
+  padding: 0;
+  margin : 0;
 }
 
 .place-item__modal-content {
@@ -43,10 +48,12 @@
   text-align: right;
 }
 
-.place-item__actions button,
+/* .place-item__actions button,
 .place-item__actions a {
   margin: 0.5rem;
 }
+ */
+
 
 @media (min-width: 768px) {
   .place-item__image {
@@ -58,3 +65,4 @@
   height: 10rem;
   width: 100%;
 }
+
